Fixed QR code padding on website

--- a/static/stylesheets/dashboard.css
+++ b/static/stylesheets/dashboard.css
@@ -49,7 +49,7 @@
 
 .qr-code {
     display: block;
-    margin: 0 auto 0 auto;
+    margin: 30px auto 30px auto;
     width: 200px;
 }
 .apple-wallet {
