--- a/templates/announcements.html
+++ b/templates/announcements.html
@@ -1,6 +1,9 @@
 <div class="content-box announcements">
-    <div class="content-header">
+    <div class="content-header col-2-flex">
         <h1>Announcements</h1>
+        <div class="right-header-group">
+            <i id="refreshAnnouncements" class="fa fa-refresh fa-2x fa-fw" aria-hidden="true"></i>
+        </div>
     </div>
     <div class="announcements-container">
         <div class="announcements-legend">
