--- a/templates/live.html
+++ b/templates/live.html
@@ -39,7 +39,7 @@
                 Hardware
             </a>
             <a class="live-navlink" data-section="FAQ">
-                FAQs
+                FAQ
             </a>
             <a class="live-navlink" target="_blank" href="https://mhacks8.devpost.com">
                 Devpost
