--- a/templates/live_faqs.html
+++ b/templates/live_faqs.html
@@ -1,36 +1,74 @@
 <div class="content-box">
     <div class="content-header">
-        <h1>FAQs</h1>
+        <h1>FAQ</h1>
     </div>
     <div class="faq-container">
-        <h4>Category 1</h4>
         <div class="faq-row">
             <div class="faq-item">
                 <div class="question" data-qid="1">
-                    Question 1
+                    Where can I park?
                 </div>
                 <div class="answer" data-qid="1">
-                    Answer 1
+                    We’ll have parking available at 2955 Cass Ave (directly behind the venue).
+                    <img src="{{ static('assets/parkingMap.png') }}" alt="Parking location map">
                 </div>
             </div>
             <div class="faq-item">
                 <div class="question" data-qid="2">
-                    Question 2
+                    Can I sleep?
                 </div>
                 <div class="answer" data-qid="2">
-                    Answer 2
+                    Yes! The Lions, Tigers, and Red Wings Room will be converted to sleeping rooms from 3 - 8 AM Friday night and 12 - 8 AM on Saturday night. We’ll have air mattresses and sleep canoes courtesy of Arbor Networks available.
                 </div>
             </div>
-        </div>
-
-        <h4>Category 2</h4>
-        <div class="faq-row">
             <div class="faq-item">
                 <div class="question" data-qid="3">
-                    Question 3
+                    Where can I shower?
                 </div>
                 <div class="answer" data-qid="3">
-                    Answer 3
+                    Arbor Networks will be providing shuttles to/from showers at the Boll Family YMCA, as well as providing hygiene products to those that need them. Sign up for a shuttle here [link coming soon].
+                </div>
+            </div>
+            <div class="faq-item">
+                <div class="question" data-qid="4">
+                    How can I get back to campus during the event?
+                </div>
+                <div class="answer" data-qid="4">
+                    The Detroit Connector will be stopping at the Detroit Masonic Temple (on Temple St between Cass and 2nd Ave) and can take you back to the Central Campus Transit Center at the following times:
+                    <img src="{{ static('assets/busSchedule.png') }}" alt="Schedule for Detroit Connector buses">
+                    You will need a valid MCard to ride the Connector. Please note that we cannot guarantee a seat on the bus, as passenger boarding on a first come/first served basis. Riders should be at the bus stop at least 10 minutes before the scheduled arrival time.
+                </div>
+            </div>
+            <div class="faq-item">
+                <div class="question" data-qid="5">
+                    What if I forgot something?
+                </div>
+                <div class="answer" data-qid="5">
+                    Check out Arbor Network's Lost and Forgotten table to see if they have what you need!
+                </div>
+            </div>
+            <div class="faq-item">
+                <div class="question" data-qid="6">
+                    What if I have another question?
+                </div>
+                <div class="answer" data-qid="6">
+                    Help Desks are located in the Fountain Ballroom and the 2nd Floor. You can also talk to any member of the core team (We’ll be in TEAL t-shirts).
+                </div>
+            </div>
+            <div class="faq-item">
+                <div class="question" data-qid="7">
+                    What should I bring?
+                </div>
+                <div class="answer" data-qid="7">
+                    Bring your laptop, phone, chargers, student ID, toiletries, water bottle, a change of clothes, and a well-rested and open mind. We'll do our best to get you anything else you need.
+                </div>
+            </div>
+            <div class="faq-item">
+                <div class="question" data-qid="8">
+                    What can't I bring?
+                </div>
+                <div class="answer" data-qid="8">
+                    Weapons of any kind, drugs, and alcohol.
                 </div>
             </div>
         </div>
