--- a/templates/hardware.html
+++ b/templates/hardware.html
@@ -4,6 +4,7 @@
     </div>
     <div class="hardware-container">
         <h2>We have tons of hardware for you to hack on!</h2>
-        <h3>Check back soon for a full list!</h3>
+        <p>Check out our hardware list <a href="https://docs.google.com/spreadsheets/d/1WNFuOB4xUAPpKzE-awmZqtyrSkMUj0BBOeKKaVjVMCw/edit#gid=0" target="_blank">here</a>.</p>
+        <p>Learn more about the MHacks 8 Hacker Boards at <a href="http://mhacks.github.io/" target="_blank">http://mhacks.github.io/</a>!</p>
     </div>
 </div>
