--- a/templates/index.html
+++ b/templates/index.html
@@ -526,6 +526,8 @@
                     <div class="logo-row medium">
                         <div><a target="_blank" href="https://www.quickenloans.com"><img
                                 src="{{ static('assets/quicken_logo.jpg') }}" alt="Sponsor Logo - Quicken Loans"></a></div>
+                        <div><a target="_blank" href="https://www.arbornetworks.com/"><img
+                                src="{{ static('assets/ArborNetworks_logo.png') }}" alt="Sponsor Logo - Arbor Networks"></a></div>
                     </div>
                     <div class="logo-row small">
                         <div><a target="_blank" href="http://www.1517fund.com/"><img
@@ -574,6 +576,16 @@
                                 src="{{ static('assets/mongodb_logo.jpg') }}" alt="Sponsor Logo - MongoDB"></a></div>
                     </div>
                 </div>
+
+                <div class="logo-container big-tile">
+                    <h1 style="font-size:20pt; font-variant: small-caps">In Partnership With</h1>
+                    <div class="logo-row">
+                        <div class="col-2"><a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">
+                            <img id="mlh-logo" src="{{ static('assets/mlh_color.png') }}" alt="Major League Hacking"></a></div>
+                        <div class="col-2"><a href="https://hacker.fund/" target="_blank">
+                            <img id="mlh-logo" src="{{ static('assets/HackerFundLogo.png') }}" alt="Hacker Fund"></a></div>
+                    </div>
+                </div>
             </div>
 
                   
@@ -585,19 +597,12 @@
         </div>
 
         <div class="footer-bar">
-            <a id="footer-left"
+            <a id="footer-flag"
                href="https://mlh.io/seasons/na-2017/events?utm_source=na-2017&utm_medium=TrustBadge&utm_campaign=na-2017&utm_content=white"
                target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2017/white.svg"
-                                    alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
+                                    alt="Major League Hacking 2017 Hackathon Season" style="height:100%"></a>
 
             &copy; MHacks 2016
-
-            <div id="footer-right">
-                <p>In Partnership With</p>
-                <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">
-                    <img id="mlh-logo" src="{{ static('assets/mlh.png') }}" alt="Major League Hacking">
-                </a>
-            </div>
         </div>
     </div>
 {% endblock %}
