Added mentorship slack info

--- a/templates/mentorship.html
+++ b/templates/mentorship.html
@@ -9,9 +9,9 @@
        <h3>
            Check back often, because we'll be adding more links throughout the weekend.
        </h3>
-       <!--p>
-           Need a mentor? Head to <a href="#" target="_blank"><< insert mentorship here >></a>!
-       </p-->
+       <p>
+           Need a mentor? Head to the <a href="https://mhacks-hackers.slack.com/" target="_blank">mentorship slack</a> and type "/minerva" to learn more about our mentorship platform!<br>(Sign up <a href="https://mhacks-hackers.slack.com/signup" target="_blank">here</a> first)
+       </p>
         <p>
             Need help finding a team? Check out <a href="https://www.venturestorm.com/users/sign_up?type=developer" target="_blank">Venturestorm's Team App</a>!
         </p>
