--- a/templates/index.html
+++ b/templates/index.html
@@ -580,10 +580,12 @@
                 <div class="logo-container big-tile">
                     <h1 style="font-size:20pt; font-variant: small-caps">In Partnership With</h1>
                     <div class="logo-row">
-                        <div class="col-2"><a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">
-                            <img id="mlh-logo" src="{{ static('assets/mlh_color.png') }}" alt="Major League Hacking"></a></div>
-                        <div class="col-2"><a href="https://hacker.fund/" target="_blank">
-                            <img id="mlh-logo" src="{{ static('assets/HackerFundLogo.png') }}" alt="Hacker Fund"></a></div>
+                        <div class="col-3"><a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">
+                            <img class="partner-logo" src="{{ static('assets/mlh_color.png') }}" alt="Major League Hacking"></a></div>
+                        <div class="col-3"><a href="https://hacker.fund/" target="_blank">
+                            <img class="partner-logo" src="{{ static('assets/HackerFundLogo.png') }}" alt="Hacker Fund"></a></div>
+                        <div class="col-3">
+                            <img class="partner-logo" src="{{ static('assets/minervaLogo.png') }}" alt="Minerva"></div>
                     </div>
                 </div>
             </div>
