--- a/templates/mentorship.html
+++ b/templates/mentorship.html
@@ -4,16 +4,46 @@
     </div>
     <div class="mentorship-container">
         <h2>
-           Some resources to help you get started!
-       </h2>
-       <h3>
-           Check back often, because we'll be adding more links throughout the weekend.
-       </h3>
-       <p>
-           Need a mentor? Head to the <a href="https://mhacks-hackers.slack.com/" target="_blank">mentorship slack</a> and type "/minerva" to learn more about our mentorship platform!<br>(Sign up <a href="https://mhacks-hackers.slack.com/signup" target="_blank">here</a> first)
-       </p>
-        <p>
-            Need help finding a team? Check out <a href="https://www.venturestorm.com/users/sign_up?type=developer" target="_blank">Venturestorm's Team App</a>!
-        </p>
+            Some resources to help you get started!
+        </h2>
+        <h3>
+            Check back often, because we'll be adding more links throughout the weekend.
+        </h3>
+        <div class="mentorship-block">
+            <p>
+                Need a mentor? Head to the <a href="https://mhacks-hackers.slack.com/" target="_blank">mentorship
+                slack</a>
+                <br>Sign up <a href="https://mhacks-hackers.slack.com/signup" target="_blank">here</a> first. See a Help
+                Desk if you need to be added to the Slack.
+                <br>We're using a mentorship platform called Minerva, and we're really excited to be piloting it!
+            </p>
+            <div class="faq-item mentorship-minerva">
+                <div class="question" data-qid="M">
+                    How do I use Minerva?
+                </div>
+                <div class="answer" data-qid="M">
+                    <p>
+                        <br>Here's how it works: In any channel, simply use the <code>/help</code> command. Remember to
+                        keep everything lowercase!
+                        <img src="{{ static('assets/minervaHelp.gif') }}" alt="Minerva /help command gif">
+                        <br>If you’d like to help other hackers, you can use the <code>/add</code> command to tell
+                        Minerva the skills that you are familiar with.
+                        <img src="{{ static('assets/minervaAdd.gif') }}" alt="Minerva /add command gif">
+                        <br>Now, when a hacker asks for help with a skill that you know, you will be automatically
+                        matched with that hacker! When you’re done, use <code>/minerva end</code> to end your help
+                        session with a hacker.
+                        <br>If you’d like to see what you can do with Minerva, just type <code>/minerva</code> anywhere
+                        in the MHacks Slack.
+                        <img src="{{ static('assets/minerva.gif') }}" alt="Minerva /minerva command gif">
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="mentorship-block">
+            <p>
+                Need help finding a team? Check out <a href="https://www.venturestorm.com/users/sign_up?type=developer"
+                                                       target="_blank">Venturestorm's Team App</a>!
+            </p>
+        </div>
     </div>
 </div>
