logo links to main page. fixed #83

--- a/templates/live.html
+++ b/templates/live.html
@@ -14,7 +14,7 @@
                 <p>Detroit Masonic Temple</p>
             </div>
             <div id="logo">
-                <a href="{{ url_for('mhacks-live') }}">
+                <a href="{{ url_for('mhacks-home') }}">
                     <img id="logo" src="{{ static('assets/logo.png') }}" alt="MHacks 8 Logo - M">
                 </a>
             </div>
