changed mentorship slack signup

--- a/templates/mentorship.html
+++ b/templates/mentorship.html
@@ -13,7 +13,7 @@
             <p>
                 Need a mentor? Head to the <a href="https://mhacks-hackers.slack.com/" target="_blank">mentorship
                 slack</a>
-                <br>Sign up <a href="https://mhacks-hackers.slack.com/signup" target="_blank">here</a> first. See a Help
+                <br>Sign up <a href="https://mhacks-hackers.herokuapp.com/" target="_blank">here</a> first. See a Help
                 Desk if you need to be added to the Slack.
                 <br>We're using a mentorship platform called Minerva, and we're really excited to be piloting it!
             </p>
