--- a/templates/maps.html
+++ b/templates/maps.html
@@ -16,9 +16,13 @@
                 <img src="{{ static('assets/5th_floor.png') }}" alt="5th Floor Diagram">
             </div>
             <div class="floor-details">
-                <h3>Cortices</h3>
+                <h3>Web Cortex</h3>
                 <ul>
-                    <li>Web Cortex</li>
+                    <li>MongoDB</li>
+                    <li>RetailMeNot</li>
+                    <li>Namecheap</li>
+                    <li>Linode</li>
+                    <li>Qualtrics</li>
                 </ul>
             </div>
         </div>
@@ -27,13 +31,15 @@
                 <img src="{{ static('assets/4th_floor.png') }}" alt="4th Floor Diagram">
             </div>
             <div class="floor-details">
-                <h3>Cortices</h3>
-                <ul>
-                    <li>Hardware Cortex</li>
-                </ul>
                 <h3>Other</h3>
                 <ul>
                     <li>Bathrooms</li>
+                </ul>
+            </div>
+            <div class="floor-details">
+                <h3>Hardware Cortex</h3>
+                <ul>
+                    <li>ICS</li>
                 </ul>
             </div>
         </div>
@@ -42,13 +48,28 @@
                 <img src="{{ static('assets/3rd_floor.png') }}" alt="3rd Floor Diagram">
             </div>
             <div class="floor-details">
-                <h3>Cortices</h3>
-                <ul>
-                    <li>AR/VR Cortex</li>
-                </ul>
                 <h3>Tech Talk Rooms</h3>
                 <ul>
                     <li>Red Wings</li>
+                </ul>
+                <h3>Machine Learning + AI Cortex</h3>
+                <ul>
+                    <li>Wolfram Alpha</li>
+                    <li>GE Digital</li>
+                    <li>SalesforceIQ</li>
+                    <li>Amazon</li>
+                </ul>
+            </div>
+            <div class="floor-details">
+                <h3>AR/VR Cortex</h3>
+                <ul>
+                    <li>Magna Electronics</li>
+                </ul>
+                <h3>Startup Lounge</h3>
+                <ul>
+                    <li>VentureStorm</li>
+                    <li>Branch</li>
+                    <li>Petrichor</li>
                 </ul>
             </div>
         </div>
@@ -57,14 +78,17 @@
                 <img src="{{ static('assets/2nd_floor.png') }}" alt="2nd Floor Diagram">
             </div>
             <div class="floor-details">
-                <h3>Cortices</h3>
-                <ul>
-                    <li>Mobile Cortex</li>
-                </ul>
                 <h3>Other</h3>
                 <ul>
                     <li>Help Desk</li>
                     <li>Bathrooms</li>
+                </ul>
+                <h3>Mobile Cortex</h3>
+                <ul>
+                    <li>Expedia</li>
+                    <li>Target</li>
+                    <li>Concur</li>
+                    <li>Google</li>
                 </ul>
             </div>
         </div>
@@ -86,12 +110,6 @@
                 <img src="{{ static('assets/basement.png') }}" alt="Basement Floor Diagram">
             </div>
             <div class="floor-details">
-                <h3>Cortices</h3>
-                <ul>
-                    <li>Social Impact Cortex</li>
-                    <li>Detroit Cortex</li>
-                    <li>Mobility Cortex</li>
-                </ul>
                 <h3>Tech Talk Rooms</h3>
                 <ul>
                     <li>Lions Room</li>
@@ -102,6 +120,30 @@
                     <li>Hacker and Sponsor Registration</li>
                     <li>Sleeping Rooms (10pm - 7am)</li>
                     <li>Bathrooms</li>
+                </ul>
+            </div>
+            <div class="floor-details">
+                <h3>Social Impact, Detroit, Mobility Cortices</h3>
+                <ul>
+                    <li>NREL</li>
+                    <li>Facebook</li>
+                    <li>VFA</li>
+                    <li>1517 Fund</li>
+                    <li>BlackRock</li>
+                    <li>Esri</li>
+                    <li>Capital One</li>
+                    <li>Battelle</li>
+                    <li>a16z</li>
+                    <li>KCG</li>
+                    <li>Meridian Health Plan</li>
+                    <li>Wellopp</li>
+                    <li>Microsoft</li>
+                    <li>Bloomberg</li>
+                    <li>Goldman Sachs</li>
+                    <li>HookLogic</li>
+                    <li>Quicken Loans</li>
+                    <li>GM</li>
+                    <li>Pillar</li>
                 </ul>
             </div>
         </div>
