updated arbor networks shower info

--- a/templates/live_faqs.html
+++ b/templates/live_faqs.html
@@ -26,7 +26,7 @@
                     Where can I shower?
                 </div>
                 <div class="answer" data-qid="3">
-                    Arbor Networks will be providing shuttles to/from showers at the Boll Family YMCA, as well as providing hygiene products to those that need them. Sign up for a shuttle here [link coming soon].
+                    Arbor Networks will be providing shuttles to/from showers at the Boll Family YMCA, as well as providing hygiene products to those that need them. Please contact Arbor Networks if you are interested.
                 </div>
             </div>
             <div class="faq-item">
