--- a/templates/mentorship.html
+++ b/templates/mentorship.html
@@ -11,7 +11,7 @@
         </h3>
         <div class="mentorship-block">
             <p>
-                Need a mentor? Head to the mentorship slack here: <br><a href="https://mhacks-hackers.herokuapp.com/" target="_blank">https://mhacks-hackers.herokuapp.com/</a><br>
+                Need a mentor? Head to the mentorship slack here: <br><a href="http://bit.ly/mhacks8" target="_blank">http://bit.ly/mhacks8/</a><br>
                 See a Help Desk if you need to be added to the Slack.
                 <br>We're using a mentorship platform called Minerva, and we're really excited to be piloting it!
             </p>
