Update mentorship FAQ

--- a/templates/mentorship.html
+++ b/templates/mentorship.html
@@ -21,10 +21,10 @@
                 </div>
                 <div class="answer" data-qid="M">
                     <p>
-                        <br>Here's how it works: In any channel, simply use the <code>/help</code> command. Remember to
+                        <br>Here's how it works: In any channel, simply use the <code>/minerva help</code> command. Remember to
                         keep everything lowercase!
                         <img src="{{ static('assets/minervaHelp.gif') }}" alt="Minerva /help command gif">
-                        <br>If you’d like to help other hackers, you can use the <code>/add</code> command to tell
+                        <br>If you’d like to help other hackers, you can use the <code>/minerva add</code> command to tell
                         Minerva the skills that you are familiar with.
                         <img src="{{ static('assets/minervaAdd.gif') }}" alt="Minerva /add command gif">
                         <br>Now, when a hacker asks for help with a skill that you know, you will be automatically
