added mentorship resources

--- a/templates/mentorship.html
+++ b/templates/mentorship.html
@@ -7,7 +7,9 @@
             Some resources to help you get started!
         </h2>
         <h3>
-            Check back often, because we'll be adding more links throughout the weekend.
+            <a href="https://github.com/omkarmoghe/MH-Android-Workshop">Intro Android Workshop</a><br>
+            <a href="https://github.com/russellladd/BeaconRanger">Intro iOS Workshop</a><br>
+            <a href="https://drive.google.com/open?id=0B7ty8eTrsvjPUGlhcEVxT0phekk">Bot Making Workshop</a><br>
         </h3>
         <div class="mentorship-block">
             <p>
