mhacks 9 blackout #hype

--- a/templates/blackout.html
+++ b/templates/blackout.html
@@ -7,8 +7,8 @@
 {% block content %}
     <div class="background">
         <div class="background-title">
-            <h1>MHacks 8</h1>
-            <h3>Fall 2016</h3>
+            <h1>MHacks 9</h1>
+            <h3>Winter 2017</h3>
             {% if error is defined %}
                 <div style="width: 40%; margin: auto;" class="alert alert-danger" role="alert">{{ error }}</div>
             {% endif %}
