Added basic ugly categories section

--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -6,177 +6,15 @@ h3 {
     font-weight: bolder;
     margin: 0 0 8px 0;
 }
-/* ---- Grid ---- */
-
-.grid {
-    width: 100%;
-}
-
-/* clearfix */
-.grid:after {
-    content: '';
-    display: block;
-    clear: both;
-}
-
-/* ---- Grid Item ---- */
-
-.grid-item, .grid-item-content {
-    width: 160px;
-    height: 120px;
-    z-index: 1;
-}
-
-.grid-item-content {
-    width: 160px;
-    height: 120px;
-    padding: 15px;
-    visibility: visible;
-    transition: all 0.2s;
-    border: 1px solid rgba(20, 20, 20, 0.1);
-}
-
-.grid-item[data-expandable='1'] {
-    cursor: pointer;
-}
-
-.grid-item[data-expandable='1'] .expand-icon:before {
-    font-family: FontAwesome;
-    content: "\f055";
-    position:absolute;
-    right: 0;
-    transition: all 0.2s;
-    height: 16px;
-    width: 16px;
-    margin: 10px;
-}
-
-.width2.grid-item, .width2 .grid-item-content {
-    width: 320px;
-}
-
-.tile-shadow {
-    /*box-shadow: 0 0 15px 2px rgba(50, 50, 50, 0.75);*/
-    z-index: 2;
-}
-
-/* --- Expanded Grid Item --- */
-
-.grid-item-expand {
-    width: 480px;
-    height: 360px;
-    z-index: 5;
-    cursor: pointer;
-}
-
-.grid-item-expand.expand-small {
-    width: 480px !important;
-    height: 360px !important;
-}
-
-.grid-item-expand.expand-medium {
-    width: 640px !important;
-    height: 480px !important;
-}
-
-/* --- Grid Item Content --- */
-
-.grid-item:hover h1, .grid-item:hover h3 {
-    color: #0093B1 !important;
-    transition: color 0.2s;
-}
-
-/* --- @media Queries --- */
-@media only screen and (min-width: 1300px) {
-    .grid-item-expand {
-        width: 1120px;
-        height: 600px;
-    }
-
-    .grid-item-expand .grid-item-content {
-        width: 1120px;
-        height: 600px;
-    }
-}
-
-@media only screen and (max-width: 1300px){
-    .grid-item-expand {
-        width: 800px !important;
-        height: 480px !important;
-    }
-
-    .grid-item-expand .grid-item-content {
-        width: 800px;
-        height: 480px;
-    }
-}
 
 @media only screen and (max-width: 1140px) {
-    .grid-item-expand {
-        width: 640px !important;
-        height: 480px !important;
-    }
-
-    .grid-item-expand .grid-item-content {
-        width: 640px;
-        height: 480px;
-    }
-
     .faq-item {
         width: 45%;
         margin-right: 4%;
     }
 }
 
-@media only screen and (max-width: 820px) {
-    .grid-item-expand {
-        width: 480px !important;
-        height: 360px !important;
-    }
-
-    .grid-item-expand .grid-item-content {
-        width: 480px;
-        height: 360px;
-    }
-}
-
-@media only screen and (max-width: 900px) {
-    .grid-item[data-remove='2'] {
-        width: 0px;
-        height: 0px;
-        visibility: hidden;
-        transition: all 0.2s;
-    }
-
-    .grid-item[data-remove='2'] * {
-        display: none;
-    }
-}
-
 @media only screen and (max-width: 720px) {
-    .grid-item[data-remove='1'] {
-        width: 0px;
-        height: 0px;
-        visibility: hidden;
-        transition: all 0.2s;
-    }
-
-    .grid-item[data-remove='1'] * {
-        display: none;
-    }
-
-    .grid-item-expand, .grid-item-expand .grid-item-content,
-    .grid-item, .grid-item .grid-item-content,
-    .grid-item-expand.expand-medium, .grid-item-expand.expand-medium .grid-item-content,
-    .grid-item-expand.expand-small, .grid-item-expand.expand-small .grid-item-content {
-        width: 100% !important;
-    }
-
-    .grid-item-expand.expand-medium, .grid-item-expand.expand-medium .grid-item-content,
-    .grid-item-expand.expand-small, .grid-item-expand.expand-small .grid-item-content {
-        max-width: 100%;
-    }
-
     .grid-item .grid-item-content .basic-info {
         text-align: center;
         width: 100%;
@@ -191,3 +29,30 @@ h3 {
         transition: all 0.2s;
     }
 }
+
+.categories-section {
+    background-color: #F3F3F4;
+}
+
+.categories-header {
+    color: black;
+    text-align: center;
+    padding: 40px 0;
+    font-weight: 300;
+    font-size: 32px;
+}
+
+.category-item {
+    color: black;
+    text-align: center;
+}
+
+.category-item img {
+    max-width: 210px;
+    max-height: 210px;
+}
+
+.category-item h4 {
+    margin-top: 30px;
+}
+
